z-index fix

--- a/src/css/modules/header.less
+++ b/src/css/modules/header.less
@@ -9,7 +9,7 @@ header {
         }
 
         .nav-container {
-            z-index: 1000;
+            z-index: 999;
         }
 
         #logo {
