--- a/src/css/modules/slideshow.less
+++ b/src/css/modules/slideshow.less
@@ -10,6 +10,8 @@
 		height: 50rem;
 		padding: 0;
         margin: 0 0 5rem 0;
+        position: relative;
+        z-index: 1;
 
 		#slideshow  {
 			width: 100%;
